--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,34 +1,34 @@
 ---
 ---
 
+@use "variables";
+@use "layout";
+@use "components";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
-@import "variables";
-@import "layout";
-@import "components";
 
 // Global typography
 h1, h2, h3, h4, h5, h6 {
-  font-family: $heading-font;
+  font-family: variables.$heading-font;
   font-weight: 600;
   line-height: 1.3;
-  margin-bottom: $spacing-sm;
+  margin-bottom: variables.$spacing-sm;
 }
 
-h1 { font-size: $font-size-h1; }
-h2 { font-size: $font-size-h2; }
-h3 { font-size: $font-size-h3; }
+h1 { font-size: variables.$font-size-h1; }
+h2 { font-size: variables.$font-size-h2; }
+h3 { font-size: variables.$font-size-h3; }
 
 p {
-  margin-bottom: $spacing-md;
+  margin-bottom: variables.$spacing-md;
   line-height: 1.7;
 }
 
 a {
-  color: $primary-color;
+  color: variables.$primary-color;
   transition: color 0.3s ease;
 
   &:hover {
-    color: darken($primary-color, 15%);
+    color: variables.$primary-color-darker;
   }
 }
 
@@ -37,18 +37,18 @@ a {
 .text-left { text-align: left; }
 .text-right { text-align: right; }
 
-.mt-sm { margin-top: $spacing-sm; }
-.mt-md { margin-top: $spacing-md; }
-.mt-lg { margin-top: $spacing-lg; }
-.mt-xl { margin-top: $spacing-xl; }
+.mt-sm { margin-top: variables.$spacing-sm; }
+.mt-md { margin-top: variables.$spacing-md; }
+.mt-lg { margin-top: variables.$spacing-lg; }
+.mt-xl { margin-top: variables.$spacing-xl; }
 
-.mb-sm { margin-bottom: $spacing-sm; }
-.mb-md { margin-bottom: $spacing-md; }
-.mb-lg { margin-bottom: $spacing-lg; }
-.mb-xl { margin-bottom: $spacing-xl; }
+.mb-sm { margin-bottom: variables.$spacing-sm; }
+.mb-md { margin-bottom: variables.$spacing-md; }
+.mb-lg { margin-bottom: variables.$spacing-lg; }
+.mb-xl { margin-bottom: variables.$spacing-xl; }
 
-.py-lg { padding-top: $spacing-lg; padding-bottom: $spacing-lg; }
-.py-xl { padding-top: $spacing-xl; padding-bottom: $spacing-xl; }
+.py-lg { padding-top: variables.$spacing-lg; padding-bottom: variables.$spacing-lg; }
+.py-xl { padding-top: variables.$spacing-xl; padding-bottom: variables.$spacing-xl; }
 
 // Responsive images
 img {
@@ -58,8 +58,8 @@ img {
 
 // Highlight sections
 .highlight-section {
-  background-color: lighten($secondary-color, 5%);
-  padding: $spacing-xl;
-  margin: $spacing-xl 0;
-  border-radius: $border-radius-lg;
+  background-color: variables.$secondary-color-light;
+  padding: variables.$spacing-xl;
+  margin: variables.$spacing-xl 0;
+  border-radius: variables.$border-radius-lg;
 }
