--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
   {% seo %}
 </head>
-<body>
+<body class="{% if page.title == 'Home' %}page-home{% endif %}">
   {% include header.html %}
 
   <main class="main-content">
