--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -1,10 +1,10 @@
-@use "variables";
+@import "variables";
 
 // Base layout styles
 body {
-  font-family: variables.$body-font;
-  color: variables.$text-color;
-  background-color: variables.$background-color;
+  font-family: $body-font;
+  color: $text-color;
+  background-color: $background-color;
   line-height: 1.6;
   margin: 0;
   padding: 0;
@@ -12,19 +12,20 @@ body {
 
 // Container
 .container {
-  max-width: variables.$desktop;
+  max-width: $desktop;
   margin: 0 auto;
-  padding: 0 variables.$spacing-md;
+  padding: 0 $spacing-md;
 
-  @media (max-width: variables.$mobile) {
-    padding: 0 variables.$spacing-sm;
+  @media (max-width: $mobile) {
+    padding: 0 $spacing-sm;
   }
 }
 
 // Header
 .site-header {
-  background-color: white;
-  box-shadow: variables.$box-shadow;
+  background-color: $background-color;
+  border-bottom: 1px solid $border-color;
+  box-shadow: $box-shadow;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -33,14 +34,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: variables.$spacing-sm 0;
+    padding: $spacing-sm 0;
   }
 
   .logo {
-    font-family: variables.$heading-font;
+    font-family: $heading-font;
     font-size: 1.5rem;
     font-weight: bold;
-    color: variables.$primary-color;
+    color: $primary-color;
     text-decoration: none;
   }
 
@@ -49,20 +50,20 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-    gap: variables.$spacing-lg;
+    gap: $spacing-lg;
 
-    @media (max-width: variables.$mobile) {
-      gap: variables.$spacing-sm;
+    @media (max-width: $mobile) {
+      gap: $spacing-sm;
     }
 
     a {
-      color: variables.$text-color;
+      color: $text-color;
       text-decoration: none;
       font-weight: 500;
       transition: color 0.3s ease;
 
       &:hover {
-        color: variables.$primary-color;
+        color: $primary-color;
       }
 
       &.external::after {
@@ -76,7 +77,7 @@ body {
 // Main content
 .main-content {
   min-height: calc(100vh - 200px);
-  padding: variables.$spacing-lg 0;
+  padding: $spacing-lg 0;
 }
 
 // Home page specific - remove padding when hero is present
@@ -86,10 +87,10 @@ body.page-home .main-content {
 
 // Footer
 .site-footer {
-  background-color: variables.$text-color;
+  background-color: $text-color;
   color: white;
-  padding: variables.$spacing-lg 0;
-  margin-top: variables.$spacing-xl;
+  padding: $spacing-lg 0;
+  margin-top: $spacing-xl;
 
   .footer-content {
     text-align: center;
@@ -98,16 +99,16 @@ body.page-home .main-content {
   .footer-links {
     display: flex;
     justify-content: center;
-    gap: variables.$spacing-md;
-    margin-bottom: variables.$spacing-sm;
+    gap: $spacing-md;
+    margin-bottom: $spacing-sm;
 
-    @media (max-width: variables.$mobile) {
+    @media (max-width: $mobile) {
       flex-direction: column;
-      gap: variables.$spacing-xs;
+      gap: $spacing-xs;
     }
 
     a {
-      color: variables.$secondary-color;
+      color: $secondary-color;
       text-decoration: none;
 
       &:hover {
@@ -117,7 +118,7 @@ body.page-home .main-content {
   }
 
   .copyright {
-    font-size: variables.$font-size-small;
+    font-size: $font-size-small;
     opacity: 0.8;
   }
 }
