Update website content - 2025-10-14 10:30

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
             <a href="{{ item.url | relative_url }}">{{ item.name }}</a>
           {% endunless %}
         {% endfor %}
-        <a href="https://github.com/{{ site.company.github }}" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/{{ site.github.repository }}" target="_blank" rel="noopener">GitHub</a>
       </div>
 
       <div class="copyright">
