Update website content - 2025-10-29 16:38

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-content">
       <a href="{{ '/' | relative_url }}" class="logo">
-        {{ site.company.name }}
+        {{ site.title }}
       </a>
 
       <nav class="nav-menu">
