--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="copyright">
-        &copy; {{ 'now' | date: "%Y" }} {{ site.company.name }}. All rights reserved.
+        &copy; {{ 'now' | date: "%Y" }} {{ site.company.name }}. Accelerating drug discovery through AI-powered chemoproteomics.
       </div>
     </div>
   </div>
