Update website content - 2025-11-10 15:17

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="header-content">
       <a href="{{ '/' | relative_url }}" class="logo">
-        {{ site.title }}
+        <img src="{{ '/assets/images/favicon.png' | relative_url }}" alt="SynapSpec Icon" style="height: 40px; margin-right: 12px; vertical-align: middle;">
+        <span style="color: #0B2F52;">Synap</span>Spec
       </a>
 
       <nav class="nav-menu">
